# gdscript2rst

./: .gitignore  CMakeLists.txt  README
apps/: CMakeLists.txt  MainFrameBase.cpp  MainFrameBase.h  app.cpp  app.h  setupdialog.cpp  setupdialog.h
docs/: CMakeLists.txt  mainpage.md
include/: parse.h  shell_tools.h
src/: CMakeLists.txt  parse.cpp  shell_tools.cpp
tests/: CMakeLists.txt  testlib.cpp  testparse.cpp
